--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <title>Fluid Network</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
+  <script src="/node_modules/bulma-carousel/dist/js/bulma-carousel.min.js"></script>
+  <link rel="stylesheet" href="/node_modules/bulma-carousel/dist/css/bulma-carousel.min.css">
+  <link rel="stylesheet" href="styles/main.css">
   <!--<link rel="stylesheet" href="styles/debug.css">-->
 </head>
 <body>
   <section class="header">
-    <nav class="level" style="padding:2em;">
+    <div class="level" style="padding:2rem;">
       <div class="level-left">
         <div class="level-item">
          <img src="images/fluid-truck.png" alt="logo image">
@@ -33,14 +36,14 @@
      <a class="button button is-light">Create An Account</a>
    </div>
  </div>
-</nav>
+</div>
 </section>
 <!-- .hero -->
 <section class="hero">
   <div class="hero-body is-paddingless">
     <figure class="image">
       <img src="images/hero-image.png">
-      <h1 class="title is-size-1 is-size-3-touch has-text-white" style="position: absolute; bottom: 0; padding: 0 0 1.5em .5em;">Beverage Supply<br />Simplified.</h1>
+      <h1 class="title is-size-1 is-size-3-touch has-text-white" style="position: absolute; bottom: 0; padding: 0 0 1.5rem .5rem;">Beverage Supply<br />Simplified.</h1>
     </figure>
   </div>
 </section>
@@ -61,67 +64,204 @@
       <div class="column">
         <div class="level">
           <div class="level-item has-text-centered">
-           <figure class="image image is-128x128">
+           <figure class="image is-128x128">
             <img src="images/target.png" alt="logo image" />
           </figure>
         </div>
       </div>
-      <div class="level">
-        <div class="level-item has-text-centered">
-          <p class="title">aha</p>
-        </div>
+      <div class="has-text-centered" style="padding-bottom: 1rem;">
+        <div class="title">The Perfect Pour</div>
       </div>
-      <div class="level">
-        <div class="level-item has-text-centered">
-          <p class="subtitle">oh no</p>
-        </div>
+      <div class="has-text-centered">
+        <div class="subtitle">Search thousands of detailed product listings providing the clarity you need to stock the perfect shelf.</div>
       </div>
     </div>
     <!-- /.column -->
     <!-- .column -->
-      <div class="column">
-        <div class="level">
-          <div class="level-item has-text-centered">
-           <figure class="image image is-128x128">
-            <img src="images/target.png" alt="logo image" />
-          </figure>
-        </div>
-      </div>
+    <div class="column">
       <div class="level">
         <div class="level-item has-text-centered">
-          <p class="title">aha</p>
-        </div>
-      </div>
-      <div class="level">
-        <div class="level-item has-text-centered">
-          <p class="subtitle">oh no</p>
-        </div>
+         <figure class="image is-128x128">
+          <img src="images/clipboard.png" alt="logo image" />
+        </figure>
       </div>
     </div>
-    <!-- /.column --><!-- .column -->
-      <div class="column">
-        <div class="level">
-          <div class="level-item has-text-centered">
-           <figure class="image image is-128x128">
-            <img src="images/target.png" alt="logo image" />
-          </figure>
-        </div>
-      </div>
-      <div class="level">
-        <div class="level-item has-text-centered">
-          <p class="title">aha</p>
-        </div>
-      </div>
-      <div class="level">
-        <div class="level-item has-text-centered">
-          <p class="subtitle">oh no</p>
-        </div>
-      </div>
+    <div class="has-text-centered" style="padding-bottom: 1rem;">
+      <div class="title">Single Sourcing</div>
     </div>
-    <!-- /.column -->
+    <div class="has-text-centered">
+      <div class="subtitle">Save time by placing one order across multiple suppliers.</div>
+    </div>
+  </div>
+  <!-- /.column -->
+  <!-- .column -->
+  <div class="column">
+    <div class="level">
+      <div class="level-item has-text-centered">
+       <figure class="image is-128x128">
+        <img src="images/fluid-truck2.png" alt="logo image" />
+      </figure>
+    </div>
+  </div>
+  <div class="has-text-centered" style="padding-bottom: 1rem;">
+    <div class="title">Dependable Delivery</div>
+  </div>
+  <div class="has-text-centered">
+    <div class="subtitle">Your relationships with suppliers stay the same, payments and delivery exactly the way you expect.</div>
   </div>
 </div>
+<!-- /.column -->
+</div>
+
 </section>
+<!-- trusted by section -->
+<section id="trusted-by" class="section has-background-light">
+  <div class="level">
+    <div class="level-item">
+      <div class="level">
+        <div class="level-item image">
+          <img src="images/ornament-left.png" style="max-width: 100%; height: auto;" />
+        </div>
+        <div class="level-item">
+          <p class="is-size-5 has-text-black" style="padding: 0 15px 0 15px;">TRUSTED BY</p>
+        </div>
+        <div class="level-item image">
+          <figure class="image">
+            <img src="images/ornament-right.png" style="max-width: 100%; height: auto;"/>
+          </figure>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="columns">
+      <!-- .column -->
+      <div class="column">
+        <nav class="level">
+          <div class="level-item has-text-centered">
+            <div class="image is-96x96" style="display: flex; align-items: center;">
+              <img src="images/trusted-logo-1.png" alt="logo image" />
+            </div>
+          </div>
+        </nav>
+      </div>
+      <div class="column">
+        <div class="level">
+          <div class="level-item has-text-centered">
+            <figure class="image is-96x96" style="display: flex; align-items: center;">
+              <img src="images/trusted-logo-2.png" alt="logo image" />
+            </figure>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="level">
+          <div class="level-item has-text-centered">
+            <figure class="image is-96x96" style="display: flex; align-items: center;">
+              <img src="images/trusted-logo-3.png" alt="logo image" />
+            </figure>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="level">
+          <div class="level-item has-text-centered">
+            <figure class="image is-96x96" style="display: flex; align-items: center;">
+              <img src="images/trusted-logo-4.png" alt="logo image" />
+            </figure>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="level">
+          <div class="level-item has-text-centered">
+            <figure class="image is-96x96" style="display: flex; align-items: center;">
+              <img src="images/trusted-logo-5.png" alt="logo image" />
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- ./ trusted by section -->
+<section>
+  <div class="columns">
+    <div class="column">
+      <div class="level">
+        <div class="level-item has-text-centered">
+          <div>
+            <button class="button is-large is-dark" style="margin: 5rem 0 1rem 0;">
+              Create A Free Account
+            </button>
+            <p style="margin: 0 0 5rem 0;">FluidNetwork is always completely free for Restaurants, Bars and Retailers</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="has-background-light">
+  <div class='carousel carousel-animated carousel-animate-slide'>
+    <div class='carousel-container'>
+      <div class='carousel-item has-background'>
+        <section class="section">
+          <div class="container">
+            <div class="columns">
+              <div class="column is-three-fifths is-offset-1">
+                <div>
+                  <figure class="image" style="margin-right: -15%;">
+                    <img src="images/feature-image.png" style="max-width: 85%; height: auto;">
+                  </figure>
+                </div>
+              </div>
+              <div class="column has-text-centered>
+                <div class="container">
+                  <h1 class="subtitle">Powerful Search</h1>
+                  <p>Lorem ipsom aasd asdaiqe asdad asdadasdasdad.</p>
+                  <p>Asdadsasdadads woi  ljasss kl asd. kwrkwer  mkwerm,wer wre.</p>
+                  <p>Lorem asd llk apqwe q kenr adads lj rkwejr wljrelklrwkrlkerwr</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
+  </section>
+  <footer class="footer has-background-grey-light">
+    <div class="columns">
+      <div class="column is-3" style="display: flex; align-items: center;">
+        <div style="margin: 0 auto">
+          <p>About FluidNetwork</p>
+          <p>Request a demo</p>
+          <p>Contact us</p>
+          <p>Signup for free</p>
+        </div>
+      </div>
+      <div class="column is-3" style="display: flex; align-items: center;">
+        <div style="margin: 0 auto">
+          <p>About FluidNetwork</p>
+          <p>Request a demo</p>
+          <p>Contact us</p>
+          <p>Signup for free</p>
+        </div>
+      </div> 
+      <div class="column is-2"></div>     
+      <div class="column is-4" style="display: flex; align-items: center;">
+        <div class="level" style="margin-left: auto; margin-right: 2rem;">
+          <h2 class="title has-text-white" style="margin-right: 10px;">FluidNetwork</h2>
+          <figure class="image is-96x96">
+          <img src="images/footer-truck-white.png" alt="logo image">
+          </figure>
+       </div>
+     </div>
+   </div>
+ </div>
+</footer>
 <!-- /.section -->
+<script type="text/javascript">
+  var carousels = bulmaCarousel.attach();
+</script>
 </body>
 </html>
